some CSS and bug fixes

--- a/templates/post/createPost.html.twig
+++ b/templates/post/createPost.html.twig
@@ -2,6 +2,8 @@
 
 {% block title %}Create post!{% endblock %}
 {% block main %}
+<div class="col-6 offset-3" id="loginForm">
     <h2>Create Your Post know</h2>
     {{ form(createPostForm) }}
+</div>
 {% endblock %}
