--- a/templates/user/registerUser.html.twig
+++ b/templates/user/registerUser.html.twig
@@ -2,6 +2,8 @@
 
 {% block title %}Register!{% endblock %}
 {% block main %}
+    <div class="col-6 offset-3" id="registerForm">
     <h2>Create Your Account know</h2>
     {{ form(registerUserForm) }}
+    </div>
 {% endblock %}
