--- a/public/css/app.css
+++ b/public/css/app.css
@@ -1,18 +1,80 @@
+#h1Title {
+font-family: cursive;
+    font-weight: bold;
+    color: white;
+    text-shadow: -1px 0 black, 0 1px black, 1px 0 black, 0 -1px black;
+}
+
+#h1TitleContent {
+    height: 100px;
+    display:flex;
+    align-items: center;
+    justify-content: center;
+}
 
 #postPics {
-    height: 100px;
-    width: 100px;
-    border-radius: 50px 25px;
+    width: 100%;
+    border-radius: 25px 25px;
     margin-right: 10px;
 }
 
 
 .container {
     flex-direction: column ;
-    width: 60%;
+
     margin: auto;
 }
 
-.postItem {
+/*.listItems {
+    background-color: rgba(255,255,255,0.5);
+}*/
 
+.postItem {
+    padding-top: 10px;
+
+    width: 100%;
+}
+
+.article {
+background-color: rgba(245,245,245,0.7);
+    border-radius: 25px 25px;
+    padding: 5px ;
+}
+
+.commentPost {
+/*    background-color: rgba(245,245,245,0.5);*/
+}
+
+.profilePicsComments {
+    border-radius: 75%;
+    height: 50px;
+    width: 50px;
+}
+
+.titleCommentDiv {
+    display: flex;
+}
+
+.postCommentZone {
+    background-color: rgba(245,245,245,0.5);
+}
+
+/*REGISTERFORM*/
+
+#registerForm, #loginForm {
+    color: whitesmoke;
+    text-shadow: -1px 0 black, 0 1px black, 1px 0 black, 0 -1px black;
+    align-items: center;
+    padding: 80px 120px 120px 140px;
+    background-image: url('../pictures/default/eart.jpg');
+    background-size: cover;
+    opacity:0.7;
+    border-radius: 50%;
+    background-position: left -80px bottom 0px;
+
+}
+
+body {
+    background: url('../pictures/default/space2.jpg');
+    background-attachment: fixed;
 }
