--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -8,13 +8,21 @@
 
     {% block stylesheets %}{% endblock %}
 </head>
-    <div>
-        <a class="dropdown-item" href="{{ path('home') }}">Accueil</a>
-        <a href="{{ path('registerUser') }}">Register</a>
+<div id="h1TitleContent">
+
+    <h1 id="h1Title">Welcome to JeanBouc</h1>
+
+</div>
+<div>
+    <a class="dropdown-item" href="{{ path('home') }}">Accueil</a>
+    {% if app.user %}
         <a href="{{ path('createPost') }}">Publish</a>
-        <a href="{{ path('login') }}">Login</a>
         <a href="{{ path('logout') }}">Log out</a>
-    </div>
+    {% else %}
+        <a href="{{ path('registerUser') }}">Register</a>
+        <a href="{{ path('login') }}">Login</a>
+    {% endif %}
+</div>
 {% for label, messages in app.flashes %}
     {% for message in messages %}
         <div class="alert alert-{{ label }}">
@@ -23,14 +31,20 @@
     {% endfor %}
 {% endfor %}
 
-<body style="background-image: url({% block bg %}{% endblock %});">
+<body>
 <main>
     {% block main %} {% endblock %}
 </main>
 </body>
 <footer>
     &copy; {{ "now"|date('Y') }} Powered by "Tonton Suprême Poulet"
-    <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.11.0/umd/popper.min.js" integrity="sha384-b/U6ypiBEHpOf/4+1nzFpr53nxSS+GLCkfwBdFNTxtclqqenISfwAzpKaMNFNmj4" crossorigin="anonymous"></script>
-    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta/js/bootstrap.min.js" integrity="sha384-h0AbiXch4ZDo7tp9hKZ4TsHbi047NrKGLO3SEJAg45jXxnGIfYzk4Si90RDIqNm1" crossorigin="anonymous"></script>
+    <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js"
+            integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN"
+            crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.11.0/umd/popper.min.js"
+            integrity="sha384-b/U6ypiBEHpOf/4+1nzFpr53nxSS+GLCkfwBdFNTxtclqqenISfwAzpKaMNFNmj4"
+            crossorigin="anonymous"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta/js/bootstrap.min.js"
+            integrity="sha384-h0AbiXch4ZDo7tp9hKZ4TsHbi047NrKGLO3SEJAg45jXxnGIfYzk4Si90RDIqNm1"
+            crossorigin="anonymous"></script>
 </footer>
